<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2"
    tools:context="com.example.Khabeer_task.ui.EmployeeSalary">

    <include
        android:id="@+id/error_layout"
        layout="@layout/error_layout" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        style="@style/Widget.MaterialComponents.AppBarLayout.PrimarySurface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:layout_constraintBottom_toTopOf="@id/employee_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/my_toolbar"
            style="@style/ThemeOverlay.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            android:gravity="center"
            app:layout_scrollFlags="scroll|enterAlways">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/اسم_الصفحة"
                android:textColor="@color/white"
                android:textSize="@dimen/_20ssp" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/employee_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_13sdp"
        app:layout_constraintBottom_toTopOf="@id/all_employee_information"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_16sdp">

            <ImageView
                android:id="@+id/employee_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/user"
                app:layout_constraintBottom_toTopOf="@id/hiring_date"
                app:layout_constraintEnd_toStartOf="@id/employee_position"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hiring_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="سبتمبر , 2019"
                android:textColor="#8b8c8f"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/employee_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_4sdp"
                android:text="mahmoud "
                android:textColor="@color/grey"
                android:textSize="@dimen/_13ssp"
                android:translationY="-10dp"
                app:layout_constraintBottom_toBottomOf="@id/employee_position"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/employee_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/employee_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_4sdp"
                android:text="طبيب اختصاصى مسالك بولية"
                android:textColor="@color/grey"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/employee_image"
                app:layout_constraintTop_toBottomOf="@id/employee_name" />

            <TextView
                android:id="@+id/employee_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/إجمالى_الراتب"
                android:textColor="#377eaa"
                android:textSize="@dimen/_13ssp"
                android:translationX="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/employee_salary_number"
                app:layout_constraintStart_toEndOf="@id/employee_image" />

            <TextView
                android:id="@+id/employee_salary_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="347.20 ج"
                android:textColor="#ad473b"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/employee_salary" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/all_employee_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_15sdp"
        android:elevation="@dimen/_10sdp"
        android:orientation="vertical"
        app:cardCornerRadius="@dimen/_13sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/employee_information">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_16sdp">

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/salary_statistics"
                android:layout_width="0dp"
                android:layout_height="@dimen/_90sdp"
                app:layout_constraintStart_toEndOf="@id/employee_deductions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
<!--            <com.anychart.AnyChartView-->
<!--                android:id="@+id/anyChart"-->
<!--                android:layout_width="@dimen/_60sdp"-->
<!--                android:layout_height="@dimen/_60sdp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

<!--            <ImageView-->
<!--                android:id="@+id/salary_statistics"-->
<!--                android:layout_width="@dimen/_60sdp"-->
<!--                android:layout_height="@dimen/_60sdp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent" />-->

            <TextView
                android:id="@+id/employee_entitlements_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/dark_blue"
                android:drawablePadding="@dimen/_5sdp"
                android:text="773.23 ج"
                android:textColor="@color/white_red"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintEnd_toStartOf="@id/employee_entitlements"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/employee_entitlements"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:text="@string/الإستحقاقات"
                android:textColor="@color/dark_black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toEndOf="@id/employee_entitlements_number"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/employee_deductions_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawableStart="@drawable/rectangle_svgrepo_com"
                android:drawablePadding="@dimen/_5sdp"
                android:text="1120.43 ج"
                android:textColor="@color/white_red"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/employee_entitlements_number" />

            <TextView
                android:id="@+id/employee_deductions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/الإستقطاعات"
                android:textColor="@color/dark_black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toEndOf="@id/employee_deductions_number"
                app:layout_constraintTop_toBottomOf="@id/employee_entitlements" />

            <View
                android:id="@+id/line"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_13sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_13sdp"
                android:background="#b7b7b7"
                app:layout_constraintEnd_toStartOf="@id/salary_statistics"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/employee_deductions_number" />

            <TextView
                android:id="@+id/employee_total_salary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/إجمالى_الراتب"
                android:textColor="@color/dark_black"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintStart_toEndOf="@id/employee_total_salary_number"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <TextView
                android:id="@+id/employee_total_salary_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:drawableStart="@drawable/green_rectangle"
                android:drawablePadding="@dimen/_5sdp"
                android:text="347.20- ج"
                android:textColor="@color/white_red"
                android:textSize="@dimen/_13ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/employee_total_salary">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:background="@color/white_blue"
                        android:gravity="center"
                        android:text="@string/القيمة"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:background="@color/white_blue"
                        android:gravity="center"
                        android:text="@string/البند"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:id="@+id/m"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:background="@color/white_blue"
                        android:gravity="center"
                        android:text="@string/م"
                        android:textColor="@color/whtie"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/basic_salary"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text=".23 ج"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/مرتب_أساسى"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/work_nature"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:background="@color/white_blue2"
                        android:gravity="center"
                        android:text="1000ج"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:background="@color/white_blue2"
                        android:gravity="center"
                        android:text="@string/طبيعة_العمل"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:background="@color/white_blue2"
                        android:gravity="center"
                        android:text="2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fadbd8"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/other_deductions"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="1120.23 ج"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/استقطاعات_أخرى"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_marginStart="1dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13ssp" />
                </LinearLayout>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>